# SDK_NEW

Desktop/UseSDK/UseWechatSDK_pro/SDK_NEW/WechatPaySDK.framework/: Info.plist  WechatPaySDK
Desktop/UseSDK/UseWechatSDK_pro/SDK_NEW/WechatPaySDK.framework/Headers/: WechatPaySDK.h  WechatSpay.h
Desktop/UseSDK/UseWechatSDK_pro/SDK_NEW/WechatPaySDK.framework/Modules/: module.modulemap
Desktop/UseSDK/UseWechatSDK_pro/UseWechatSDK_pro/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
Desktop/UseSDK/UseWechatSDK_pro/UseWechatSDK_pro.xcodeproj/: project.pbxproj
Desktop/UseSDK/UseWechatSDK_pro/UseWechatSDK_pro.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Desktop/git/ULife3.5/: Podfile  ULife3.5_CommitLog_ReadMe.txt  translate.xls
Desktop/git/ULife3.5/ACVideoDecoder/ACVideoDecoder/: ACVideoDecoder.h  ACVideoDecoder.mm
Desktop/git/ULife3.5/ACVideoDecoder/ACVideoDecoder.xcodeproj/: project.pbxproj
Desktop/git/ULife3.5/ACVideoDecoder/AVPlayer/: AVCommon.cpp  AVCommon.h  AVPlayPort.cpp  AVPlayPort.h  AVPlayer.cpp  AVPlayer.h  AVPlayer.rc  AVPlayer.vcproj  GosFrameHeadDef.h  JLSocketDef.h  JLThreadCtrl.cpp  JLThreadCtrl.h  JLogWriter.cpp  JLogWriter.h  MutexLock.h  StdAfx.cpp  StdAfx.h  resource.h
Desktop/git/ULife3.5/ACVideoDecoder/Headers/: ACVideoDecoder.h
Desktop/git/ULife3.5/ACVideoDecoder/common/avcoder/: AVDecoder.cpp  AVDecoder.h  AVEncoder.cpp  AVEncoder.h  AVRecord.cpp  AVRecord.h  G711Decoder.cpp  G711Decoder.h
Desktop/git/ULife3.5/ACVideoDecoder/common/buffctrl/: AVBuffer.cpp  AVBuffer.h  AVBufferCtrl.cpp  AVBufferCtrl.h
Desktop/git/ULife3.5/GDVideoPlayer/GDVideoPlayer/: ACVideoDecoder.h  FFMuxing.c  GDCapture.h  GDCapture.m  GDDeviceIcon.m  GDFfmpeg.h  GDFfmpeg.m  GDPacketAssistant.h  GDPacketAssistant.m  GDPlayerView.h  GDPlayerView.m  GDVideoBuffer.h  GDVideoBuffer.m  GDVideoDecoder.h  GDVideoDecoder.m  GDVideoHead.h  GDVideoHead.m  GDVideoPlayer.h  GDVideoPlayer.mm  MediaHeader.h  WriteTxt.h  WriteTxt.m
Desktop/git/ULife3.5/GDVideoPlayer/GDVideoPlayer.xcodeproj/: project.pbxproj
Desktop/git/ULife3.5/GDVideoPlayer/GDVideoPlayerTests/: Info.plist
Desktop/git/ULife3.5/GDVideoPlayer/Headers/: GDDeviceIcon.h  GDVideoPlayer.h  NVRHeader.h
Desktop/git/ULife3.5/GOSPanoramaPlayer/GOSPanoramaPlayer/: GOSPanoramaPlayer.h  GOSPanoramaPlayer.mm
Desktop/git/ULife3.5/GOSPanoramaPlayer/GOSPanoramaPlayer.xcodeproj/: project.pbxproj
Desktop/git/ULife3.5/LanSDK/LanSDK/: LanSDK.h  LanSDK.m
Desktop/git/ULife3.5/LanSDK/LanSDK.xcodeproj/: project.pbxproj
Desktop/git/ULife3.5/LanSDK/src/: CMakeLists.txt  makefile
Desktop/git/ULife3.5/LanSDK/src/avmanagement/: CMakeLists.txt
Desktop/git/ULife3.5/LanSDK/src/avmanagement/Include/: AV_Stream.h  QueueBuf.h
Desktop/git/ULife3.5/LanSDK/src/avmanagement/Src/: AV_Stream.c  QueueBuf.c
Desktop/git/ULife3.5/LanSDK/src/common/Include/: DebugPrint.h  QuickSocket.h  ThreadUtil.h  UTF8Utils.h  ws_socket.h
Desktop/git/ULife3.5/LanSDK/src/common/Src/: QuickSocket.c  ThreadUtil.c  UTF8Utils.c  ws_socket.c
Desktop/git/ULife3.5/LanSDK/src/devicesearch/: CMakeLists.txt
Desktop/git/ULife3.5/LanSDK/src/devicesearch/Include/: WlanDeviceSearch.h
Desktop/git/ULife3.5/LanSDK/src/devicesearch/Src/: WlanDeviceSearch.c
Desktop/git/ULife3.5/LanSDK/src/paramconfig/: CMakeLists.txt
Desktop/git/ULife3.5/LanSDK/src/paramconfig/Include/: DeviceParamsConfig.h
Desktop/git/ULife3.5/LanSDK/src/paramconfig/Src/: DeviceParamsConfig.c
Desktop/git/ULife3.5/LanSDK/src/protocol/: CMakeLists.txt
Desktop/git/ULife3.5/LanSDK/src/protocol/Include/: GVAP_PackageHeader.h  GVAP_Protocal.h  Tlib_Cmddefine.h  Tlib_ProtocolAX.h
Desktop/git/ULife3.5/LanSDK/src/protocol/Src/: GVAP_PackageHeader.cpp  GVAP_Protocal.cpp  Tlib_ProtocolAX.cpp
Desktop/git/ULife3.5/LanSDK/src/userinterface/Include/: UlifeDefines.h  libUlife_API.h
Desktop/git/ULife3.5/LanSDK/src/userinterface/Src/: libUlife_API.cpp
Desktop/git/ULife3.5/LanSDK/src/usermanagement/: CMakeLists.txt
Desktop/git/ULife3.5/LanSDK/src/usermanagement/Include/: GVAPWorker.h
Desktop/git/ULife3.5/LanSDK/src/usermanagement/Src/: GVAPWorker.cpp
Desktop/git/ULife3.5/MediaManager/: MediaManager_SDK_CommitLog_ReadMe.txt
Desktop/git/ULife3.5/MediaManager/MediaManager/: MediaHeader.h  MediaManager.m
Desktop/git/ULife3.5/MediaManager/MediaManager.xcodeproj/: project.pbxproj
Desktop/git/ULife3.5/NetPro/Headers/: AVIOCTRLDEFs.h  NetPro.h
Desktop/git/ULife3.5/NetPro/NetPro/: NetPro.h  NetPro.mm
Desktop/git/ULife3.5/NetPro/NetPro.xcodeproj/: project.pbxproj
Desktop/git/ULife3.5/NetPro/NetProSDK/: NetProCommon.cpp  NetProCommon.h  NetProSDK.vcproj  NetProSDKAPI.cpp  NetProSDKAPI.h  NetProSDKDef.h
Desktop/git/ULife3.5/NetSDK/Headers/: NetSDK.h
Desktop/git/ULife3.5/NetSDK/NetSDK/: NetSDK.h  NetSDK.mm  NetSDKAPI.h
Desktop/git/ULife3.5/NetSDK/NetSDK.xcodeproj/: project.pbxproj
Desktop/git/ULife3.5/StaticHeader/: AVIOCTRLDEFs.h  CommenlyUsedFounctions.h  CommonlyUsedFounctions.h  GDVideoPlayer.h  GOSPanoramaPlayer.h  GosFrameHeadDef.h  LogFileDebug.h  NSString+Common.h  NSTimer+YYAdd.h  NetPro.h  NetSDK.h  UIDevice+YYAdd.h  YYKitMacro.h  iRouterInterface.h
Desktop/git/ULife3.5/ULife3.5/: Header.h  Info.plist  main.m
Desktop/git/ULife3.5/ULife3.5.xcodeproj/: project.pbxproj
Desktop/git/ULife3.5/ULife3.5.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Desktop/git/ULife3.5/ULife3.5.xcworkspace/: contents.xcworkspacedata
Desktop/git/ULife3.5/ULife3.5/Base.lproj/: Info.plist  LaunchScreen.storyboard
Desktop/git/ULife3.5/ULife3.5/Localizations/: SelfLocalString.h  SelfLocalString.m
Desktop/git/ULife3.5/ULife3.5/SysRelated/: AppDelegate.h  AppDelegate.m  ConfigureFile.h  ConfigureFile.m  Definition.h  HWLaunchViewController.h  HWLaunchViewController.m  PrefixHeader.pch  ViewController.h  ViewController.m
Desktop/git/ULife3.5/echocancel.framework/: Info.plist  echocancel
Desktop/git/ULife3.5/echocancel.framework/Headers/: IoTcare_echo.h
Desktop/git/ULife3.5/echocancel.framework/Modules/: module.modulemap
(+1001 files in other folders)
